# ChangeLog for app-text/dvisvgm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.30 2012/01/12 22:10:10 maekke Exp $

  12 Jan 2012; Markus Meier <maekke@gentoo.org> dvisvgm-1.0.9-r1.ebuild,
  dvisvgm-1.0.10.ebuild:
  add ~arm, bug #390671

*dvisvgm-1.0.10 (22 Dec 2011)

  22 Dec 2011; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.0.10.ebuild:
  version bump

  09 Dec 2011; Naohiro Aota <naota@gentoo.org> dvisvgm-1.0.9-r1.ebuild:
  Add ~x86-fbsd

  16 Nov 2011; Jeroen Roovers <jer@gentoo.org> dvisvgm-1.0.9-r1.ebuild:
  Marked ~hppa (bug #390671).

*dvisvgm-1.0.9-r1 (15 Nov 2011)

  15 Nov 2011; Tim Harder <radhermit@gentoo.org> +dvisvgm-1.0.9-r1.ebuild:
  Revbump to use system potrace library. Update to EAPI 4.

  11 Nov 2011; Mike Frysinger <vapier@gentoo.org> dvisvgm-1.0.8.ebuild,
  dvisvgm-1.0.9.ebuild:
  Update gtest depend after category migration #387155.

*dvisvgm-1.0.9 (02 Nov 2011)

  02 Nov 2011; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.0.9.ebuild:
  version bump

  16 Oct 2011; Fabian Groffen <grobian@gentoo.org> dvisvgm-1.0.8.ebuild:
  Marked ~x86-macos

  04 Oct 2011; Jeroen Roovers <jer@gentoo.org> dvisvgm-1.0.8.ebuild:
  Stable for HPPA (bug #355085).

  21 Sep 2011; Alexis Ballier <aballier@gentoo.org> -dvisvgm-1.0.7.ebuild:
  remove old

  18 Sep 2011; Raúl Porcel <armin76@gentoo.org> dvisvgm-1.0.8.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #355085

  28 Aug 2011; Fabian Groffen <grobian@gentoo.org> dvisvgm-1.0.8.ebuild,
  +files/dvisvgm-1.0.8-darwin.patch:
  Fixed for and marked ~x64-macos

  14 Aug 2011; Markus Meier <maekke@gentoo.org> dvisvgm-1.0.8.ebuild:
  arm stable, bug #355085

  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> dvisvgm-1.0.8.ebuild:
  ppc/ppc64 stable wrt #355085

  12 Aug 2011; Thomas Kahle <tomka@gentoo.org> dvisvgm-1.0.8.ebuild:
  x86 stable per bug 355085
