@@ -1,6 +1,11 @@
 # ChangeLog for app-text/dvisvgm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.30 2012/01/12 22:10:10 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvisvgm/ChangeLog,v 1.31 2012/03/20 10:02:49 aballier Exp $
+
+*dvisvgm-1.0.11 (20 Mar 2012)
+
+  20 Mar 2012; Alexis Ballier <aballier@gentoo.org> +dvisvgm-1.0.11.ebuild:
+  version bump
 
   12 Jan 2012; Markus Meier <maekke@gentoo.org> dvisvgm-1.0.9-r1.ebuild,
   dvisvgm-1.0.10.ebuild:
